# client-selection-hfl

./: .gitignore  README.md  data_loader.py  download_data.py  explore_results.py  gcp_setup.sh  models.py  nohup.out  pyproject.toml  requirements.txt  run_all_simulations.sh  run_gcp.sh  run_n140.sh  run_paper_sim.sh  run_simulation.py  simulation.py  test_sanity.py
.claude/: settings.json
configs/: paper_full.yaml  smoke.yaml  tier1_core.yaml  tier2_fl.yaml  tier2_reduced.yaml  tier2_sweep.yaml  tier2_sweep_synthetic.yaml
data/.partition_cache/: partitions_034466ec828ad6b4.pkl  partitions_6bdc4106d3a4c9a4.pkl  partitions_9332f7518eda5af6.pkl  partitions_b109748df8424a86.pkl  partitions_cd8e1755ade33590.pkl
results/: simulation_results_N14.csv  simulation_results_N35.csv
results/paper_full/: config.paper_sweep.resolved.yaml  paper_sweep_rounds.parquet
results/smoke/: config.resolved.yaml  convergence.parquet  runs.parquet  summary.parquet
results/sweep_smoke/: config.sweep.resolved.yaml  sweep_rounds.parquet
results/tier2_reduced/: config.tier2.resolved.yaml  tier2_rounds.parquet
results/tier2_sweep/: config.sweep.resolved.yaml  sweep_rounds.parquet
src/hflsim/: __init__.py  __main__.py  cli.py  placement.py
src/uavbench/: cli.py  plotting.py  runner.py
tests/hflsim/: test_sanity.py
uav-pso-bench/: .gitignore  HARDWARE.md  README.md  pyproject.toml  requirements.txt  run_tier1.sh
uav-pso-bench/configs/: smoke.yaml  tier1_core.yaml
uav-pso-bench/results/tier1_core/: config.resolved.yaml  convergence.parquet  runs.parquet  summary.parquet
uav-pso-bench/src/uavbench/: __init__.py  __main__.py  plotting.py
uav-pso-bench/src/uavbench/optimizers/: __init__.py  base.py  ga.py  pso.py  seeding.py
uav-pso-bench/src/uavbench/problem/: __init__.py  assignment.py  fitness.py  instance.py  value.py
uav-pso-bench/tests/: test_assignment.py  test_determinism.py
(+73 files in other folders)
