[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uavbench"
version = "0.1.0"
description = "PSO 3D UAV-placement benchmark for hierarchical federated learning (Tier-1 core)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "numpy>=1.24.0,<3.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "matplotlib>=3.7.0",
    "joblib>=1.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4.0"]

[project.scripts]
uavbench = "uavbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
